force-app/main/default/objects/Quote/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Account Type (Platform/Country) carried down from the parent Opportunity. Drives Deal Review approval routing — Platform routes to the Platform Manager, Country routes to the Country Manager.</description>
    <inlineHelpText>Platform or Country. Inherited from the Opportunity. Determines which manager approves this quote (Platform Manager vs Country Manager).</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>