force-app/main/default/objects/Quote/fields/Amendment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Reason__c</fullName>
    <description>Required when Quote_Type__c = Amendment. Documents why the amendment is being made.</description>
    <inlineHelpText>Required for Amendment quotes. Select the reason driving this change to an existing service. Used for reporting on contract amendment activity.</inlineHelpText>
    <label>Amendment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Price Change</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Resumption</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Quantity Change</fullName>
            </value>
            <value>
                <fullName>Product Change</fullName>
            </value>
            <value>
                <fullName>BAN Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>