force-app/main/default/objects/Quote/fields/API_Rate__c.field-meta.xml
<CustomField>
    <fullName>API_Rate__c</fullName>
    <description>Annual Price Increase rate agreed with the customer. Passed in IP-1 payload to Odoo for billing schedule calculation.</description>
    <label>API Rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>