force-app/main/default/objects/Quote/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <formula>Contact.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>