force-app/main/default/objects/Quote/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>The end date of the contract associated with this Quote. Used for historical data migration and renewal tracking.</description>
    <inlineHelpText>End date of the contract term covered by this quote. For renewal quotes, this is the expiration date of the current agreement.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>