force-app/main/default/objects/Quote/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <description>Contract duration in months. Minimum 12 months (VR-QUOTE-04 enforces on Accepted). Inherited from Opportunity.Contract_Term_Months__c on creation. Used for TCV calculation.</description>
    <inlineHelpText>Duration of the service commitment in months. Minimum 12 months. Multiplied by Total MRC to calculate TCV. Inherited from the Opportunity on quote creation.</inlineHelpText>
    <label>Contract Term (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>