force-app/main/default/objects/Quote/fields/Credit_Adjust_Requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Adjust_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE by Request Credit Adjustment Quick Action. Triggers Finance to permanently review and update Account credit limits.</description>
    <inlineHelpText>Use the Request Credit Adjustment quick action to check this. Triggers Finance to permanently review and revise the account&apos;s credit limits. Do not check manually.</inlineHelpText>
    <label>Credit Limit Adjust Requested</label>
    <type>Checkbox</type>
</CustomField>