force-app/main/default/objects/Quote/fields/Credit_Finance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_Finance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE by the Credit Limit Approval process when Finance Country Manager approves the credit limit override.</description>
    <label>Credit Finance Approved</label>
    <type>Checkbox</type>
</CustomField>