force-app/main/default/objects/Quote/fields/Customer_PO_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Reference__c</fullName>
    <description>Customer Purchase Order reference number. Included on Quote PDF and passed in IP-1 order line as client_order_ref.</description>
    <inlineHelpText>The customer&apos;s internal Purchase Order number for this deal. Printed on the Quote PDF and passed to Odoo for invoice reference. Required if the customer&apos;s procurement process mandates a PO number.</inlineHelpText>
    <label>Customer PO Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>