force-app/main/default/objects/Quote/fields/DE_Entity__c.field-meta.xml
<CustomField>
    <fullName>DE_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The DE subsidiary for this Quote. Lookup to Account with RecordType = DE_Entity. Auto-populated from the Opportunity. Drives BAN creation and contract entity.</description>
    <inlineHelpText>The DE subsidiary for this deal. Auto-set from the Opportunity.</inlineHelpText>
    <label>DE Subsidiary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (DE Company)</relationshipLabel>
    <relationshipName>Subsidiary_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>