force-app/main/default/objects/Quote/fields/Different_Invoice_Currency__c.field-meta.xml
<CustomField>
    <fullName>Different_Invoice_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Different Invoice Currency</label>
    <type>Checkbox</type>
</CustomField>