force-app/main/default/objects/Quote/fields/Discount_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Status__c</fullName>
    <description>Tracks the approval state for discount-threshold approval on this quote. Not Required when tier is Auto. Set by the Quote discount approval screen flow.</description>
    <inlineHelpText>Approval status for the discount on this quote. Managed by the discount approval workflow.</inlineHelpText>
    <label>Discount Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>