force-app/main/default/objects/Quote/fields/Discount_Approval_Tier__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Tier__c</fullName>
    <description>Approval tier required based on maximum line discount vs Discount_Threshold__mdt. Auto = no approval needed. CM = Country Manager. VP = Country Manager + VP. DRC = Deal Review Committee.</description>
    <inlineHelpText>Approval level required for the discount on this quote. Set automatically based on line item discounts.</inlineHelpText>
    <label>Discount Approval Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Country Manager</fullName>
            </value>
            <value>
                <fullName>Country Manager + VP</fullName>
            </value>
            <value>
                <fullName>Deal Review Committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>