force-app/main/default/objects/Quote/fields/DocuSign_Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE when this quote was accepted via the manual fallback path (Custom Setting DocuSign_Enforcement__c = FALSE). Indicates signed PDF was uploaded manually by Sales.</description>
    <label>DocuSign Manual Override</label>
    <type>Checkbox</type>
</CustomField>