force-app/main/default/objects/Quote/fields/DS_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>DS_Completed_Date__c</fullName>
    <description>Date the DocuSign envelope was completed (all parties signed).</description>
    <label>DS Completed Date</label>
    <type>Date</type>
</CustomField>