force-app/main/default/objects/Quote/fields/DS_Envelope_Id__c.field-meta.xml
<CustomField>
    <fullName>DS_Envelope_Id__c</fullName>
    <description>DocuSign envelope ID set by the DocuSign Envelope Creator flow.</description>
    <label>DS Envelope ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>