force-app/main/default/objects/Quote/fields/DS_Template_Key__c.field-meta.xml
<CustomField>
    <fullName>DS_Template_Key__c</fullName>
    <description>DocuSign template key derived from legal entity + deal type + country/site. Set by DocuSign Envelope Creator flow.</description>
    <label>DS Template Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>