force-app/main/default/objects/Quote/fields/Feasibility_Notes__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Notes__c</fullName>
    <label>Feasibility Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>