force-app/main/default/objects/Quote/fields/Feasibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Status__c</fullName>
    <label>Feasibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Feasible</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>Not Feasible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>