force-app/main/default/objects/Quote/fields/Finance_Approval_Phase__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Phase__c</fullName>
    <formula>TEXT(QuoteAccount.Finance_Approval_Phase__c)</formula>
    <label>Finance Approval Phase</label>
    <type>Text</type>
</CustomField>