force-app/main/default/objects/Quote/fields/Finance_Approval_Reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Reminder_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Incremented by F-18 each time a Finance approval reminder is sent. Visible only when Finance_Approval_Status__c = Pending. Used to track escalation.</description>
    <inlineHelpText>Number of reminder emails sent to Finance while SBI approval is pending. Incremented automatically - use this to track escalation. Read-only.</inlineHelpText>
    <label>Finance Approval Reminders Sent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>