force-app/main/default/objects/Quote/fields/Finance_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Status__c</fullName>
    <description>Quote-level Finance approval status. Distinct from Account.Finance_Approval_Phase__c. VR-QUOTE-03 blocks Accepted status if SBI pending or rejected.</description>
    <inlineHelpText>Finance approval status for Special Billing Instructions on this quote. Quote cannot be Accepted while Pending or Rejected. Updated by Country Finance, not Sales.</inlineHelpText>
    <label>Finance Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>