force-app/main/default/objects/Quote/fields/Finance_Country_Manager__c.field-meta.xml
<CustomField>
    <fullName>Finance_Country_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto-copied from Target_Site__c.Finance_Country_Manager__c. Used as approver for Credit Limit and SBI approval processes.</description>
    <label>Finance Country Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Finance_Country_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>