force-app/main/default/objects/Quote/fields/Finance_Country_Queue__c.field-meta.xml
<CustomField>
    <fullName>Finance_Country_Queue__c</fullName>
    <description>Finance Country Queue name, auto-copied from Target_Site__c.Finance_Country_Queue__c via Quote_BeforeSave_SiteManagers flow. Replaces Finance_Country_Manager__c on the Quote flexipage for display purposes.</description>
    <label>Finance Country Queue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>