force-app/main/default/objects/Quote/fields/Finance_Override_Requested__c.field-meta.xml
<CustomField>
    <fullName>Finance_Override_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE when Sales clicks &quot;Request Finance Override&quot; on a Credit-Blocked Quote. Drives visibility of the reminder button vs the initial request button. Reset to FALSE if Credit_Block__c is cleared.</description>
    <label>Finance Override Requested</label>
    <type>Checkbox</type>
</CustomField>