force-app/main/default/objects/Quote/fields/Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Free_Months__c</fullName>
    <description>Number of months MRC billing is deferred. Passed in IP-1 to Odoo. Free_Months__c &gt; 0 triggers SBI_Flag__c. Free_Months__c &gt; 3 also triggers Deal Review.</description>
    <inlineHelpText>Number of months where MRC billing is waived at the start of the contract. Any value above 0 triggers an SBI flag; above 3 months also triggers Deal Review approval.</inlineHelpText>
    <label>Free Months (MRC Waiver)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>