force-app/main/default/objects/Quote/fields/Free_Months_Reason__c.field-meta.xml
<CustomField>
    <fullName>Free_Months_Reason__c</fullName>
    <description>Reason for granting free months — required for Deal Review and SBI documentation when Free_Months__c &gt; 0.</description>
    <label>Free Months Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>