force-app/main/default/objects/Quote/fields/Free_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Period_End_Date__c</fullName>
    <description>End date of the free billing period. When both Start and End dates are set: Odoo uses exact dates rather than integer month count.</description>
    <inlineHelpText>Last day of the billing waiver period. When set alongside Free Period Start Date, Odoo uses exact dates rather than rounding to whole months. Leave blank if using Free Months only.</inlineHelpText>
    <label>Free Period End Date</label>
    <type>Date</type>
</CustomField>