force-app/main/default/objects/Quote/fields/Free_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Period_Start_Date__c</fullName>
    <description>For partial-month free periods. Start date of the free billing period. Passed to Odoo in IP-1 alongside Free_Months__c.</description>
    <inlineHelpText>First day of the billing waiver period for partial-month arrangements. Set alongside Free Period End Date to give Odoo exact dates instead of using the Free Months integer count.</inlineHelpText>
    <label>Free Period Start Date</label>
    <type>Date</type>
</CustomField>