force-app/main/default/objects/Quote/fields/FX_Rate_Model__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_Model__c</fullName>
    <description>Required when FX_Billing_Flag__c = TRUE. Standard_Reference_Rate = Odoo applies country default rate. Contract_Specific_Reference = agreed rate source documented in FX_Rate_Terms__c.</description>
    <inlineHelpText>Required when FX Billing is flagged. Standard Reference Rate lets Odoo apply the country default. Contract Specific Reference uses an agreed rate - document it in FX Rate Terms.</inlineHelpText>
    <label>FX Rate Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard_Reference_Rate</fullName>
                <label>Standard Reference Rate</label>
            </value>
            <value>
                <fullName>Contract_Specific_Reference</fullName>
                <label>Contract Specific Reference</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>