force-app/main/default/objects/Quote/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <description>Formula: TotalPrice + Total_Tax__c. The total amount the customer sees as payable. Distinct from standard GrandTotal field. Use Grand_Total__c for all customer-facing display or reports.</description>
    <formula>TotalPrice + Total_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total amount payable including tax. Auto-calculated as Total MRC plus Total Tax. Use this field for customer-facing display and reporting. Read-only.</inlineHelpText>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>