force-app/main/default/objects/Quote/fields/Invoice_Currency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Currency__c</fullName>
    <description>Currency in which invoices should be issued for this Quote. When different from the Quote currency (CurrencyIsoCode), a Special Instruction is auto-created for Finance review.</description>
    <label>Invoice Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>KRW</fullName>
            </value>
            <value>
                <fullName>IDR</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>THB</fullName>
            </value>
            <value>
                <fullName>MYR</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>