force-app/main/default/objects/Quote/fields/Is_Binding__c.field-meta.xml
<CustomField>
    <fullName>Is_Binding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE = formal binding proposal going through full approval chain. FALSE = non-binding/budgetary quote that bypasses approval and cannot be directly Accepted.</description>
    <inlineHelpText>Checked for formal proposals that go through the full approval chain and can be accepted into an Order. Uncheck for budgetary or indicative quotes that are for pricing reference only.</inlineHelpText>
    <label>Binding Quote</label>
    <type>Checkbox</type>
</CustomField>