force-app/main/default/objects/Quote/fields/Is_Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Q-6: Marks this as the primary quote for the opportunity. Only one quote per opportunity can be primary. Required before accepting a quote (SOF gate). Auto-clears on other quotes when a new primary is selected.</description>
    <inlineHelpText>Check to designate this as the primary quote for this deal. Only one quote per opportunity can be the primary. This is required before the SOF can be accepted.</inlineHelpText>
    <label>Primary Quote</label>
    <type>Checkbox</type>
</CustomField>