force-app/main/default/objects/Quote/fields/Is_Ramp_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Ramp_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE for multi-phase delivery with staged billing. Carried from the Opportunity.</description>
    <inlineHelpText>Check for deals where the customer takes space or power in multiple phases with staged billing. Carried from the parent Opportunity.</inlineHelpText>
    <label>Ramp Deal</label>
    <type>Checkbox</type>
</CustomField>