force-app/main/default/objects/Quote/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <description>Read-only display of the Legal Entity Name (English) from the Opportunity&apos;s Account. All quotes on an opportunity show the same legal entity name. Sourced live; if incorrect, the Account record must be updated via RevOps/Finance. (DIG feedback: Legal Entity Name.)</description>
    <formula>Opportunity.Account.Legal_Entity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The legal entity name (English) from the Opportunity&apos;s Account. Read-only, to change it, update the Account record (contact RevOps/Finance).</inlineHelpText>
    <label>Legal Entity Name (English)</label>
    <type>Text</type>
</CustomField>