force-app/main/default/objects/Quote/fields/Max_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Percent__c</fullName>
    <description>Highest discount percentage across all line items on this quote. Calculated by QuoteLineItem_AfterSave_DiscountCheck flow as (ListPrice - UnitPrice) / ListPrice * 100. Drives the Discount Approval Tier.</description>
    <inlineHelpText>Maximum discount % across all line items. Set automatically when line items are saved.</inlineHelpText>
    <label>Max Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>