force-app/main/default/objects/Quote/fields/Notes_To_Capacity_Approver__c.field-meta.xml
<CustomField>
    <fullName>Notes_To_Capacity_Approver__c</fullName>
    <label>Notes To Capacity Approver</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>